Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13099

ll_set_inode()) Can not initialize inode warning

XMLWordPrintable

    • 3
    • 9223372036854775807

      [75280.899955] LustreError: 30172:0:(namei.c:87:ll_set_inode()) Can not initialize inode [0x240000402:0x6:0x0] without object type: valid = 0x100000001
      [75280.902870] LustreError: 30172:0:(llite_lib.c:2580:ll_prep_inode()) new_inode -fatal: rc -12
      

      The above warnings seem to accompany statahead when remote objects are involved.
      That is supposed to be fixed with 02b5a407081c ("LU-11681 lmv: disable remote file statahead"), but the patch contains a typo: it should compare lmv_tgt_desc's calculated for different fids.

            vsaveliev Vladimir Saveliev
            vsaveliev Vladimir Saveliev
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: